fix: removendo scrollbar home firefox

--- a/fluxcore-landingpage/src/components/Header/styles.module.css
+++ b/fluxcore-landingpage/src/components/Header/styles.module.css
@@ -2,9 +2,13 @@
     margin: 0;
 	padding: 0;
 	border: 0;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 *::-webkit-scrollbar {
     display: none;
+    -ms-overflow-style: none;  /* IE and Edge */
+    scrollbar-width: none;  /* Firefox */
 }
 
 .headerWrapper{
